--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "react-github-visualizer",
   "version": "0.1.0",
-  "private": true,
+  "author": "Thong Nguyen (Tyler)",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -30,5 +31,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "github": "https://www.github.com/tylrtnguyen"
 }
